--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -5,49 +5,7 @@
 @import 'selectric';
 @import 'fresco';
 
-//@font-face {
-//  font-family: 'Montserrat-Bold';
-//  src: url("../fonts/Montserrat-Bold.ttf") format("truetype");
-//  src: url('../fonts/Montserrat-Bold.eot');
-//  src: url('../fonts/Montserrat-Bold.eot?iefix') format('eot'),
-//  url('../fonts/Montserrat-Bold.woff2') format('woff2'),
-//  url('../fonts/Montserrat-Bold.woff') format('woff');
-//}
-//
-//@font-face {
-//  font-family: 'Montserrat-Light';
-//  src: url("../fonts/Montserrat-Light.ttf") format("truetype");
-//  src: url('../fonts/Montserrat-Light.eot');
-//  src: url('../fonts/Montserrat-Light.eot?iefix') format('eot'),
-//  url('../fonts/Montserrat-Light.woff2') format('woff2'),
-//  url('../fonts/Montserrat-Light.woff') format('woff');
-//}
-//
-//@font-face {
-//  font-family: 'Montserrat-Medium';
-//  src: url("../fonts/Montserrat-Medium.ttf") format("truetype");
-//  src: url('../fonts/Montserrat-Medium.eot');
-//  src: url('../fonts/Montserrat-Medium.woff2') format('woff2'),
-//  url('../fonts/Montserrat-Medium.woff') format('woff');
-//}
-//
-//@font-face {
-//  font-family: 'Montserrat-Regular';
-//  src: url("../fonts/Montserrat-Regular.ttf") format("truetype");
-//  src: url('../fonts/Montserrat-Regular.eot');
-//  src: url('../fonts/Montserrat-Regular.eot?iefix') format('eot'),
-//  url('../fonts/Montserrat-Regular.woff2') format('woff2'),
-//  url('../fonts/Montserrat-Regular.woff') format('woff');
-//}
-//
-//@font-face {
-//  font-family: 'Montserrat-SemiBold';
-//  src: url("../fonts/Montserrat-SemiBold.ttf") format("truetype");
-//  src: url('../fonts/Montserrat-SemiBold.eot');
-//  src: url('../fonts/Montserrat-SemiBold.eot?iefix') format('eot'),
-//  url('../fonts/Montserrat-SemiBold.woff2') format('woff2'),
-//  url('../fonts/Montserrat-SemiBold.woff') format('woff');
-//}
+
 
 html{
   font-family: 'Montserrat', sans-serif;
@@ -70,7 +28,9 @@ body {
   }
 }
 .main-page, .post-type-archive, .site-main{
-
+  .entry-title{
+    margin-bottom: 30px;
+  }
 }
 .woocommerce-loop-product__title{
   color: black;
@@ -80,8 +40,20 @@ body {
   font-weight: 700;
   text-align: center;
 }
-.red-button{
-  background: linear-gradient(180deg, #D62D30 0%, #601112 100%);
+form.cart{
+  display: flex;
+  align-items: center;
+}
+.woocommerce-Tabs-panel{
+  h2{
+    margin-bottom: 20px;
+  }
+  .woocommerce-product-attributes-item__value{
+    padding: 10px 20px!important;
+  }
+}
+.red-button, .single_add_to_cart_button, .wpcf7-submit{
+  background: linear-gradient(180deg, #D62D30 0%, #601112 100%) !important;
   border: 1px solid #D62D30;
   box-sizing: border-box;
   border-radius: 4px;
@@ -92,7 +64,7 @@ body {
   padding: 13px 20px 13px 20px;
   font-weight: 500;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #FFFFFF!important;
   font-size: 12px;
   transition: all 0.3s;
   box-shadow: (4px 4px 4px rgba(0, 0, 0, 0.15));
@@ -236,6 +208,7 @@ body {
       box-sizing: border-box;
       border-radius: 4px;
       padding: 9px 26px 7px 26px;
+      color: white!important;
       .button-icon{
         position: relative;
         margin-right: 29px;
@@ -927,6 +900,11 @@ body {
   }
   .strong-view{
     height: 100%;
+    .slick-track{
+      .wpmtst-testimonial{
+        margin: 0!important;
+      }
+    }
     .slick-list, .slick-track, .slick-slide, .slick-slide > div{
       height: 100%;
     }
@@ -1035,9 +1013,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 80px 100px;
+  padding: 80px 0;
   &__container{
-    max-width: 1000px;
+    max-width: 1400px;
+    padding: 0 100px;
     display: flex;
     justify-content: space-between;
     margin: auto;
@@ -1287,5 +1266,277 @@ body{
         font-size: 16px;
       }
     }
+  }
+}
+.page-news{
+  padding-top: 100px;
+  padding-bottom: 100px;
+  .title{
+    margin-bottom: 30px;
+  }
+  .related__wrap{
+    margin-top: 50px
+  }
+  .related__slider{
+    padding-top: 50px;
+    border-top: 2px solid rgba(0,0,0,0.7);
+    .blog__item{
+      color: black;
+      h4{
+        font-size: 22px;
+        margin-bottom: 10px;
+      }
+      p{
+        font-size: 12px;
+      }
+      .thumb__wrap{
+        width: 100%;
+        height: 200px;
+        margin-bottom: 15px;
+        img{
+          max-width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+  .content{
+    font-weight: 400;
+    margin-bottom: 30px;
+    font-size: 16px;
+  }
+  &__container{
+
+  }
+  &__content{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+  &__item{
+    width: calc(33.3% - 30px);
+    margin-bottom: 30px;
+    margin-right: 30px;
+    display: block;
+    .thumb__wrap{
+      width: 100%;
+      height: 250px;
+      overflow: hidden;
+      margin-bottom: 15px;
+      img{
+        max-width: 100%;
+        height: 100%;
+        object-fit: fill;
+      }
+    }
+    .description{
+      color: black;
+      h4{
+
+      }
+      p{
+        font-size: 12px;
+      }
+    }
+  }
+}
+.single-page{
+  padding-bottom: 50px;
+  h1{
+    margin-bottom: 30px;
+    margin-top: 50px;
+  }
+  h2{
+    margin-bottom: 15px;
+  }
+  .post-thumbnail{
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    img{
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+  }
+}
+.faq{
+  &__content{
+    margin-top: 50px;
+  }
+  &__title{
+    margin-bottom: 20px;
+  }
+  &__item{
+    border-radius: 8px;
+    margin-bottom: 20px;
+    &.active{
+      .vert{
+        opacity: 0;
+      }
+    }
+    .faq__triger{
+      display: flex;
+      justify-content: space-between;
+      cursor: pointer;
+      padding: 10px 20px;
+      border: 1px solid black;
+      border-radius: 8px;
+      align-items: center;
+      background-color: rgba(0,0,0,0.1);
+      transition: 0.3s;
+      &:hover{
+        background-color: rgba(0,0,0,0.2);
+      }
+      .close-item{
+        width: 20px;
+        height: 20px;
+        position: relative;
+        .hor{
+          height: 2px;
+          width: 100%;
+          background-color: black;
+          top: calc(50% - 1px);
+          position: absolute;
+          left: 0;
+          display: block;
+        }
+        .vert{
+          width: 2px;
+          height: 100%;
+          background-color: black;
+          top: 0;
+          left: calc(50% - 1px);
+          position: absolute;
+          display: block;
+        }
+      }
+    }
+    .faq__answer{
+      padding: 20px;
+      background-color: rgba(0,0,0,0.05);
+      border-radius: 0 0 8px 8px;
+    }
+  }
+}
+.single-product{
+  a{
+    color: black;
+  }
+}
+.page-about{
+  margin-top: 100px;
+  padding-bottom: 50px;
+
+}
+.history{
+  &__item{
+    display: flex!important;
+    justify-content: space-between;
+    &-title{
+      text-align: left;
+      margin-bottom: 20px;
+    }
+  }
+  &__title{
+    margin-bottom: 30px;
+    font-weight: bolder;
+    text-align: center;
+  }
+  &__description{
+    width: calc(50% - 40px);
+  }
+  &__img{
+    width: 50%;
+  }
+  &__content{
+
+  }
+  &__lnk{
+    display: inline-flex;
+  }
+}
+.digit{
+  margin-top: 50px;
+  &__title{
+
+  }
+  &__content{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+  }
+  &__item{
+    text-align: center;
+    width: calc(33.3333% - 40px);
+    &:last-child{
+      margin-right: 0;
+    }
+  }
+  &__digit{
+    font-size: 54px;
+    font-weight: 700;
+    color: #d62d30;
+  }
+  &__desc{
+    margin-top: 15px;
+  }
+}
+.goal{
+  margin-top: 50px;
+  &__title{
+    margin-bottom: 40px;
+  }
+}
+.production{
+  &__title{
+    margin-top: 50px;
+    margin-bottom: 40px;
+  }
+  &__content{
+    position: relative;
+  }
+  &__nav{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    left: 0;
+    & > div{
+      cursor: pointer;
+      background: rgba(255, 255, 255, 0.85);
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+      backdrop-filter: blur(40px);
+      padding: 20px;
+      &.slick-disabled{
+        opacity: 0.5;
+        cursor: auto;
+      }
+    }
+  }
+  &__item{
+    picture{
+      width: 100%;
+      display: block;
+      height: 700px;
+      max-height: 70vh;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+}
+.partners{
+  padding-bottom: 40px;
+  &__title{
+    margin-top: 50px;
+    margin-bottom: 40px;
   }
 }
