Страница про компанию, скрипты, правки по стилизации

--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -1540,3 +1540,12 @@ body{
     margin-bottom: 40px;
   }
 }
+.prdctfltr-widget .prdctfltr_wc .prdctfltr_buttons{
+  display: none;
+}
+.prdctfltr_wc .prdctfltr_filter_title{
+  display: none!important;
+}
+.pf_rngstyle_thin .irs-from, .pf_rngstyle_thin .irs-to, .pf_rngstyle_thin .irs-single{
+  background-color: #8b0000!important;
+}
