--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -283,7 +283,7 @@ form.cart{
   &__title{
     font-size: 56px;
     line-height: 121%;
-    font-weight: 6700;
+    font-weight: 600;
     color: white;
     max-width: 540px;
   }
@@ -1556,5 +1556,259 @@ body{
   }
   h2, h3, h4, h5, h6{
     margin-bottom: 20px;
+  }
+  .post-thumbnail{
+    img{
+      width: 100%;
+    }
+  }
+}
+.delivery{
+  &__first, &__second{
+    &-desc{
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+  }
+  &__header{
+    position: relative;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &-title{
+      max-width: none;
+    }
+    &-subtitle{
+      max-width: none;
+    }
+    &-img{
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &-content{
+      z-index: 2;
+      text-align: center;
+    }
+  }
+  &__types{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    &-item{
+      width: calc(25% - 60px);
+    }
+    &-img{
+      border-radius: 50%;
+      overflow: hidden;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &-title{
+      font-size: 24px;
+      line-height: 141%;
+      font-weight: 600;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      text-align: center;
+    }
+    &-desc{
+      p{
+        font-size: 14px;
+        line-height: 178%;
+        text-align: center;
+      }
+      font-size: 14px;
+      line-height: 178%;
+      text-align: center;
+    }
+  }
+  &__map{
+    width: 100%;
+    .map-container{
+      height: 500px;
+      width: 100%;
+    }
+  }
+  &__bottom{
+    position: relative;
+    padding: 100px 0;
+    &-img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &-desc{
+      z-index: 2;
+      position: relative;
+      //padding-top: 150px;
+      .red-button{
+        display: inline-flex;
+      }
+    }
+  }
+}
+.wholesaler{
+  &__conditions{
+    padding-top: 80px;
+    padding-bottom: 80px;
+    &-title{
+      margin-bottom: 40px;
+    }
+    &-content{
+      display: flex;
+      justify-content: space-between;
+    }
+    &-item{
+      width: calc(50% - 40px);
+      h3{
+        margin-bottom: 40px;
+      }
+    }
+  }
+  &__documents{
+    &-content{
+      display: flex;
+      justify-content: space-between;
+      margin-top: 80px;
+      margin-bottom: 80px;
+    }
+    &-item{
+      width: calc(33.333% - 40px);
+      padding: 40px;
+      background: rgba(255,255,255,0.6);
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
+      backdrop-filter: blur(40px);
+      border-radius: 4px;
+      h3{
+        margin-bottom: 40px;
+        font-size: 24px;
+        font-weight: 600;
+      }
+      p{
+
+      }
+    }
+  }
+  &__download{
+    background-color: rgba(0,0,0,1);
+    padding: 80px 0;
+    &-content{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      a{
+        display: flex;
+        align-items: center;
+      }
+    }
+    svg{
+      margin-right: 40px;
+      width: 50px;
+      height: auto;
+      path{
+        fill: white;
+      }
+    }
+  }
+  &__form{
+    padding-top: 80px;
+    &-title{
+      margin-bottom: 40px;
+    }
+    .wpcf7{
+      form{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .wpcf7-form-control-wrap{
+          width: 100%;
+          .wpcf7-acceptance{
+              .wpcf7-list-item{
+                width: 100% !important;
+              }
+          }
+          .wpcf7-form-control{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            .wpcf7-list-item{
+              width: calc(33.333% - 40px);
+              margin-left: 0;
+              input{
+                width: auto;
+                margin-bottom: 0;
+                margin-right: 20px;
+              }
+            }
+          }
+        }
+        p{
+          width: 100%;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          input[type="submit"]{
+            display: inline-flex;
+            width: auto;
+            margin: auto;
+          }
+        }
+        .row{
+          width: calc(50% - 20px);
+        }
+      }
+    }
+  }
+}
+.contacts{
+  &__items{
+    padding-top: 80px;
+    padding-bottom: 80px;
+    &-title{
+      margin-bottom: 40px;
+    }
+    &-content{
+      display: flex;
+      justify-content: space-between;
+      p{
+        margin-bottom: 0;
+        max-width: 300px;
+        text-align: center;
+      }
+    }
+    &-item{
+      width: calc(33.3333% - 40px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    &-img{
+      height: 100px;
+      width: auto;
+      margin-bottom: 40px;
+    }
+    &-title{
+
+    }
   }
 }
