--- a/wp-content/themes/procase/src/scss/_default.scss
+++ b/wp-content/themes/procase/src/scss/_default.scss
@@ -50,6 +50,20 @@ ul,ol{
   margin-bottom: 1.2em;
   li{
     margin-bottom: 0.6em;
+    font-size: 18px;
+    line-height: 1.5em;
+    @media all and (max-width: 1200px) {
+      font-size: 17px;
+    }
+    @media all and (max-width: 1024px) {
+      font-size: 16px;
+    }
+    @media all and (max-width: 768px) {
+      font-size: 15px;
+    }
+    @media all and (max-width: 768px) {
+      font-size: 14px;
+    }
   }
 }
 strong, b{
