--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -86,7 +86,7 @@ form.cart{
   margin: auto;
 }
 .header{
-  margin-bottom: -63px;
+  margin-bottom: -67px;
   z-index: 2;
   position: relative;
   @media all and (max-width: 1550px) {
@@ -1126,7 +1126,7 @@ form.cart{
 body{
   .site-main{
     max-width: 1400px;
-    padding: 110px 100px 50px 100px;
+    padding: 40px 100px 50px 100px;
     width: 100%;
     margin: auto;
   }
@@ -1269,7 +1269,6 @@ body{
   }
 }
 .page-news{
-  padding-top: 100px;
   padding-bottom: 100px;
   .title{
     margin-bottom: 30px;
@@ -1366,6 +1365,12 @@ body{
   &__content{
     margin-top: 50px;
   }
+  h2{
+    color: black;
+    a{
+      color: black;
+    }
+  }
   &__title{
     margin-bottom: 20px;
   }
@@ -1427,7 +1432,6 @@ body{
   }
 }
 .page-about{
-  margin-top: 100px;
   padding-bottom: 50px;
 
 }
@@ -1549,12 +1553,15 @@ body{
 .pf_rngstyle_thin .irs-from, .pf_rngstyle_thin .irs-to, .pf_rngstyle_thin .irs-single{
   background-color: #8b0000!important;
 }
-.default-page{
+.default-page, .single-page, .faq-page, .page-news, .rev-page, .page-about, .page-photogalery, .page-zakaz {
+  .delivery__header{
+    margin-bottom: 40px;
+  }
   h1{
     font-weight: 700;
     margin: 30px 0;
   }
-  h2, h3, h4, h5, h6{
+  h2, h3, h4, h6{
     margin-bottom: 20px;
   }
   .post-thumbnail{
@@ -1811,4 +1818,52 @@ body{
 
     }
   }
+}
+.rev-page{
+  &__send{
+    margin-bottom: 40px;
+    .container{
+      position: relative;
+    }
+    &-img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    &-desc{
+      padding: 20px 40px;
+      position: relative;
+      z-index: 2;
+      color: white;
+      text-align: center;
+      .red-button{
+        width: 200px;
+        margin: auto;
+      }
+    }
+  }
+  &__list{
+    display: flex;
+    margin-right: -40px;
+    flex-wrap: wrap;
+  }
+  &-item{
+    width: calc(20% - 40px);
+    margin-right: 40px;
+    margin-bottom: 40px;
+    img{
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+.page-photogalery{
+  padding-bottom: 100px;
 }
