--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -2,8 +2,10 @@
 @import 'default';
 @import 'swiper-bundle';
 @import 'slick';
+@import '_vars';
 @import 'selectric';
 @import 'fresco';
+@import 'woo';
 
 
 
@@ -40,9 +42,7 @@ body {
   font-weight: 700;
   text-align: center;
 }
-form.cart{
-  display: flex;
-  align-items: center;
+form.cart {
 }
 .woocommerce-Tabs-panel{
   h2{
@@ -1244,22 +1244,26 @@ body{
     flex-direction: row-reverse;
     width: 100%;
     flex-wrap: wrap;
-    justify-content: space-between;
-    .products, .yit-wcan-container{
-      width: calc(100% - 400px);
+    justify-content: flex-start;
+    align-items: flex-start;
+    .products{
+      width: calc(100% - 340px);
       .products{
         width: 100%;
       }
     }
     .widget-area{
-      width: 300px;
+      background-color: white;
+      width: 320px;
       padding: 10px;
       border: 1px solid #000000;
       border-radius: 5px;
+      margin-right: 40px;
       h2{
         font-size: 20px;
-        margin-bottom: 10px;
-        margin-top: 30px;
+        margin-bottom: 20px;
+        margin-top: 10px;
+        font-weight: 600;
       }
       a{
         color: black;
@@ -1426,7 +1430,10 @@ body{
     }
   }
 }
-.single-product{
+.single-product, .woocommerce-checkout, .woocommerce-cart{
+  .site-main{
+    padding: 100px 100px 50px;
+  }
   a{
     color: black;
   }
@@ -1434,6 +1441,13 @@ body{
 .page-about{
   padding-bottom: 50px;
 
+}
+.woocommerce-cart{
+  .entry-content{
+    .woocommerce{
+      text-align: right;
+    }
+  }
 }
 .history{
   &__item{
@@ -1867,3 +1881,164 @@ body{
 .page-photogalery{
   padding-bottom: 100px;
 }
+.woocommerce div.product form.cart .variations td.label{
+  font-size: 14px;
+}
+.woocommerce div.product form.cart .variations label{
+  background-color: transparent;
+  border: 1px solid #d62d30!important;
+  color: black;
+  border-radius: 4px;
+  &.selectedswatch{
+    background: linear-gradient(180deg,#d62d30 0,#601112 100%)!important;
+    color: white;
+  }
+}
+.variations{
+
+  tbody{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  tr{
+    background-color: transparent!important;
+    width: 50%;
+    display: flex;
+    border: none;
+  }
+}
+.woocommerce .products ul, .woocommerce ul.products{
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -20px;
+}
+.woocommerce ul.products li.product, .woocommerce-page ul.products li.product{
+  width: calc(33.3333% - 20px);
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: white;
+  border: 1px solid #000000!important;
+  text-align: center;
+  .button{
+    display: block;
+  }
+}
+.woocommerce{
+  .woof_list{
+    label{
+      vertical-align: middle;
+      padding-top: 4px;
+      padding-bottom: 4px;
+      display: inline-block;
+      font-size: 14px;
+    }
+    &.woof_list_checkbox{
+      li{
+        width: 100%;
+        display: flex;
+        padding-top: 0;
+        margin-bottom: 10px;
+        &:first-child{
+          padding-top: 15px!important;
+        }
+        > label{
+          line-height: 120%;
+          padding-top: 0;
+          margin-left: 0;
+        }
+        > input{
+          width: 20px;
+          margin-right: 10px;
+        }
+      }
+    }
+  }
+  .widget_price_filter{
+    padding-bottom: 0;
+
+    .price_label{
+      display: none!important;
+    }
+    h4{
+      display: none;
+    }
+    form{
+      clear: both;
+      float: none;
+    }
+    .price_slider_amount{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      margin-top: 20px;
+      &:after{
+        position: absolute;
+        top: 50%;
+        left: calc(50% - 20px);
+        display: block;
+        content:"";
+        height: 1px;
+        width: 10px;
+        margin: 0 13px;
+        background: #000;
+      }
+      input{
+        display: flex!important;
+        border: 1px solid #E5E7E8;
+        font-size: 14px;
+        line-height: 100%;
+        color: #808384;
+        padding: 12px 16px;
+        width: calc(50% - 20px);
+        &:first-child{
+          margin-right: 40px;
+        }
+      }
+    }
+    .ui-slider-horizontal{
+      height: 10px;
+    }
+    .price_slider_wrapper{
+      display: flex;
+      flex-direction: column-reverse;
+      .ui-widget-content{
+        margin-top: 20px;
+        background-color: #E5E7E8;
+      }
+    }
+    .ui-slider{
+      .ui-slider-handle{
+        background-color: #001317;
+        border-radius: 0;
+        position: relative;
+        width: 18px;
+        height: 18px;
+        display: block;
+        top: -5px;
+        &:last-child{
+          top: -23px;
+        }
+        &:after{
+          position: absolute;
+          content: "";
+          width: 6px;
+          height: 6px;
+          top: 5px;
+          left: 5px;
+          display: block;
+          z-index: 3;
+          background-color: #808384;
+        }
+      }
+      .ui-slider-range{
+        background-color: #FF3A24;
+      }
+    }
+  }
+}
+.single_variation_wrap{
+
+}
+
