--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -384,6 +384,16 @@ form.cart {
   background-size: cover;
   background-position: center;
   padding-bottom: 100px;
+
+  .nex-slide-quiz{
+    display: inline-flex;
+    align-items: center;
+    img{
+      height: 20px;
+      width: auto;
+      margin-right: 10px;
+    }
+  }
   &__wrapper{
     max-width: 1155px;
     margin: auto;
@@ -411,9 +421,154 @@ form.cart {
     }
   }
   &__container{
-    display: flex;
+    display: flex!important;
     justify-content: space-between;
     margin-top: 66px;
+    &-item{
+      &.type-slide.type-slide-sixth{
+        display: flex!important;
+
+        .test__container-item-container{
+          margin-right: 0;
+          width: 100%;
+          label{
+            width: 25%;
+            margin: 0;
+            background-color: transparent;
+            border: 1px solid #d62d30;
+            position: relative;
+            .wrapper{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              input:checked + span.fon{
+                position: absolute;
+                display: block;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #d62d30;
+              }
+              input:checked ~ span{
+                color: white;
+              }
+              input:checked ~ svg{
+                z-index: 2;
+                path{
+                  fill: white;
+                }
+              }
+            }
+            span{
+              padding-left: 0!important;
+              position: static;
+              &:before{
+                display: none!important;
+              }
+            }
+            svg{
+              height: 20px;
+              width: auto;
+              margin-right: 20px;
+            }
+          }
+        }
+      }
+      &-left{
+        max-width: 750px;
+        width: 60%;
+        margin-right: 60px;
+        h2.test__container-item-title{
+          font-size: 24px;
+        }
+        .phone{
+          display: flex;
+          .red-button{
+            width: 40%;
+            padding: 15px 20px;
+            svg{
+              height: 25px;
+              width: auto;
+              margin-right: 20px;
+            }
+          }
+          input{
+            width: calc(60% - 20px);
+            margin-right: 20px;
+            padding-left: 20px;
+          }
+        }
+      }
+      &-right{
+        width: calc(40% - 60px);
+        .test__content{
+          width: 100%;
+          .test__desc{
+            padding: 20px;
+            background-color: white;
+            .test__item{
+              span{
+                font-size: 18px;
+              }
+            }
+          }
+        }
+      }
+      &.type-slide{
+        padding: 40px 0;
+        .test__container-item-container{
+          display: flex;
+          padding: 40px 0;
+          margin-right: -20px;
+          width: calc(100% + 20px);
+          label{
+            display: flex;
+            flex-direction: column;
+            background-color: white;
+            width: calc(16.6666% - 20px);
+            margin-right: 20px;
+            margin-bottom: 20px;
+            cursor: pointer;
+            .wrapper{
+              padding: 10px;
+              span{
+                padding-left: 30px;
+                font-size: 14px;
+                position: relative;
+                display: block;
+                &:before{
+                  content: "";
+                  display: block;
+                  position: absolute;
+                  left: 0;
+                  top: -4px;
+                  width: 20px;
+                  height: 20px;
+                  border-radius: 50%;
+                  border: 1px solid #1b1918;
+                  transition: border .2s ease;
+                  box-sizing: border-box;
+                }
+              }
+            }
+            input{
+              display: none;
+              &:checked + span{
+                &:before{
+                  border-width: 6px;
+                  border-color: #d62d30;
+                }
+              }
+            }
+          }
+        }
+        .test__container-item-title{
+          width: 100%;
+        }
+
+      }
+    }
   }
   &__video{
     width: 624px;
@@ -499,6 +654,7 @@ form.cart {
       &.active-tab{
         display: flex;
         justify-content: space-between;
+        align-items: flex-start;
       }
       &__left{
         width: calc(50% - 41px);
@@ -506,10 +662,14 @@ form.cart {
       }
       &__image{
         width: calc(50% - 41px);
-        filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
-        box-shadow: (4px 4px 4px rgba(0, 0, 0, 0.15));;
         overflow: hidden;
+        filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.15));
+        box-shadow: (4px 4px 4px rgba(0, 0, 0, 0.15));
+        img{
+          width: 100%;
+          height: auto;
+        }
       }
       &__title{
         font-size: 24px;
@@ -1584,6 +1744,20 @@ body{
     }
   }
 }
+.rev-page{
+  padding-bottom: 80px;
+  .strong-view.wpmtst-modern .wpmtst-testimonial-field{
+    text-align: center;
+  }
+  .strong-view.wpmtst-modern .wpmtst-testimonial-image {
+    display: inline-block;
+    position: static;
+    margin: 0 auto 20px auto;
+  }
+  .testimonial{
+    background-image: none;
+  }
+}
 .delivery{
   &__first, &__second{
     &-desc{
@@ -1626,11 +1800,16 @@ body{
     margin-top: 80px;
     margin-bottom: 80px;
     &-item{
-      width: calc(25% - 60px);
+      width: calc(33.3333% - 60px);
+      text-align: center;
     }
     &-img{
       border-radius: 50%;
       overflow: hidden;
+      text-align: center;
+      width: 150px;
+      height: 150px;
+      margin: auto;
       img{
         object-fit: cover;
         width: 100%;
@@ -2041,4 +2220,32 @@ body{
 .single_variation_wrap{
 
 }
-
+.cp-modal-body{
+  .cp-modal-body-overlay{
+    max-height: 80vh;
+  }
+  .strong-form textarea{
+    height: auto;
+    min-height: 50px;
+  }
+  h3{
+    font-size: 24px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+#wpmtst-form{
+  .strong-form-inner{
+    padding: 0;
+  }
+  .required-notice{
+    display: none;
+  }
+  span.after{
+    display: none;
+  }
+  .form-field{
+    margin-bottom: 0;
+  }
+}
