--- a/wp-content/themes/procase/src/scss/_vars.scss
+++ b/wp-content/themes/procase/src/scss/_vars.scss
@@ -48,7 +48,7 @@ $hoverbuttonhover: #C9AE1F;
       }
     }
     span{
-      font-size: 14px;
+      font-size: 1.4rem;
       line-height: 100%;
       color: #FFFFFF;
       position: relative;
