--- a/wp-content/themes/procase/src/scss/selectric.scss
+++ b/wp-content/themes/procase/src/scss/selectric.scss
@@ -1,14 +1,14 @@
-$selectric-main-color:      #FFD7D7 !default;                                              // Color used in border
+$selectric-main-color:      #BFBFBF !default;                                              // Color used in border
 $selectric-secondary-color: #BBB !default;                                              // Color used in button
-$selectric-text-color:      #BFBFBF !default;                                              // Color used in label
+$selectric-text-color:      #808384 !default;                                              // Color used in label
 $selectric-bg-color:        #FFFFFF !default;                                           // Background color
 $selectric-btn-bg-color:    transparent !default;                                           // Button background color
-$selectric-height:          43px !default;                                              // Outer height
+$selectric-height:          31px !default;                                              // Outer height
 $selectric-spacing:         10px !default;                                              // Label left padding
 $selectric-border-width:    0.5px !default;                                               // Outer border width
-$selectric-border-radius:   4px !default;                                               // Border radius
+$selectric-border-radius:   0px !default;                                               // Border radius
 $selectric-inner-height:    $selectric-height - ($selectric-border-width * 2) !default; // Inner height
-$selectric-font-size:       18px !default;                                              // Font size
+$selectric-font-size:       14px !default;                                              // Font size
 
 .selectric-wrapper {
   position: relative;
@@ -25,7 +25,6 @@ $selectric-font-size:       18px !default;                                      
   background: $selectric-bg-color;
   position: relative;
   overflow: hidden;
-  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.15), inset 0px 1px 4px rgba(0, 0, 0, 0.15);
 
   .label {
     display: block;
@@ -38,6 +37,9 @@ $selectric-font-size:       18px !default;                                      
     color: $selectric-text-color;
     height: $selectric-inner-height;
     user-select: none;
+    @media all and (max-width: 500px) {
+      font-size: 12px;
+    }
   }
 
   .button {
@@ -62,11 +64,11 @@ $selectric-font-size:       18px !default;                                      
       bottom: 0;
       left: 0;
       margin: auto;
-      width: 0;
-      height: 0;
-      border: 4px solid transparent;
-      border-top-color: $selectric-secondary-color;
-      border-bottom: none;
+      border-right: 1px solid #bbb;
+      border-bottom: 1px solid #bbb;
+      width: 6px;
+      height: 6px;
+      transform: rotate(45deg);
     }
   }
 }
@@ -195,6 +197,9 @@ $selectric-font-size:       18px !default;                                      
     padding: 10px;
     color: #666;
     cursor: pointer;
+    @media all and (max-width: 500px) {
+      font-size: 12px;
+    }
 
     &.selected {
       background: #E0E0E0;
@@ -202,12 +207,12 @@ $selectric-font-size:       18px !default;                                      
     }
 
     &.highlighted {
-      background: #FFD7D7;
+      background: #e5e7e8;
       color: #444;
     }
 
     &:hover {
-      background: #FFD7D7;
+      background: #e5e7e8;
       color: #444;
     }
   }
