--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -29,6 +29,9 @@ body {
   background-image: url(../img/ng-circle-fill.jpg);
   background-repeat: repeat-y;
   background-position: center;
+  @media all and (max-width: 980px) {
+    padding-top: 20px;
+  }
   &.overflow {
     overflow: hidden;
     pointer-events: none;
