--- a/wp-content/themes/procase/src/scss/main.scss
+++ b/wp-content/themes/procase/src/scss/main.scss
@@ -4603,6 +4603,7 @@ body{
   ul.products{
     margin-right: -7px;
     display: flex;
+    width: 100%;
     li.product{
       width: calc(25% - 7px);
       margin-right: 7px;
